cmake_minimum_required(VERSION 3.6)
project(OS_Project_xv6_)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
        files/_cat
        files/_echo
        files/_forktest
        files/_grep
        files/_init
        files/_kill
        files/_ln
        files/_ls
        files/_mkdir
        files/_rm
        files/_sh
        files/_stressfs
        files/_usertests
        files/_wc
        files/_zombie
        files/asm.h
        files/bio.c
        files/bio.d
        files/bio.o
        files/bootasm.d
        files/bootasm.o
        files/bootasm.S
        files/bootblock
        files/bootblock.asm
        files/bootblock.o
        files/bootblockother.o
        files/bootmain.c
        files/bootmain.d
        files/bootmain.o
        files/buf.h
        files/BUGS
        files/cat.asm
        files/cat.c
        files/cat.d
        files/cat.o
        files/cat.sym
        files/console.c
        files/console.d
        files/console.o
        files/cuth
        files/date.h
        files/defs.h
        files/dot-bochsrc
        files/echo.asm
        files/echo.c
        files/echo.d
        files/echo.o
        files/echo.sym
        files/elf.h
        files/entry.o
        files/entry.S
        files/entryother
        files/entryother.asm
        files/entryother.d
        files/entryother.o
        files/entryother.S
        files/exec.c
        files/exec.d
        files/exec.o
        files/fcntl.h
        files/file.c
        files/file.d
        files/file.h
        files/file.o
        files/forktest.asm
        files/forktest.c
        files/forktest.d
        files/forktest.o
        files/fs.c
        files/fs.d
        files/fs.h
        files/fs.img
        files/fs.o
        files/gdbutil
        files/grep.asm
        files/grep.c
        files/grep.d
        files/grep.o
        files/grep.sym
        files/ide.c
        files/ide.d
        files/ide.o
        files/init.asm
        files/init.c
        files/init.d
        files/init.o
        files/init.sym
        files/initcode
        files/initcode.asm
        files/initcode.d
        files/initcode.o
        files/initcode.out
        files/initcode.S
        files/ioapic.c
        files/ioapic.d
        files/ioapic.o
        files/kalloc.c
        files/kalloc.d
        files/kalloc.o
        files/kbd.c
        files/kbd.d
        files/kbd.h
        files/kbd.o
        files/kernel
        files/kernel.asm
        files/kernel.ld
        files/kernel.sym
        files/kill.asm
        files/kill.c
        files/kill.d
        files/kill.o
        files/kill.sym
        files/lapic.c
        files/lapic.d
        files/lapic.o
        files/LICENSE
        files/ln.asm
        files/ln.c
        files/ln.d
        files/ln.o
        files/ln.sym
        files/log.c
        files/log.d
        files/log.o
        files/ls.asm
        files/ls.c
        files/ls.d
        files/ls.o
        files/ls.sym
        files/main.c
        files/main.d
        files/main.o
        files/Makefile
        files/memide.c
        files/memlayout.h
        files/mkdir.asm
        files/mkdir.c
        files/mkdir.d
        files/mkdir.o
        files/mkdir.sym
        files/mkfs
        files/mkfs.c
        files/mmu.h
        files/mp.c
        files/mp.d
        files/mp.h
        files/mp.o
        files/Notes
        files/param.h
        files/picirq.c
        files/picirq.d
        files/picirq.o
        files/pipe.c
        files/pipe.d
        files/pipe.o
        files/pr.pl
        files/printf.c
        files/printf.d
        files/printf.o
        files/printpcs
        files/proc.c
        files/proc.d
        files/proc.h
        files/proc.o
        files/README
        files/rm.asm
        files/rm.c
        files/rm.d
        files/rm.o
        files/rm.sym
        files/runoff
        files/runoff.list
        files/runoff.spec
        files/runoff1
        files/sh.asm
        files/sh.c
        files/sh.d
        files/sh.o
        files/sh.sym
        files/show1
        files/sign.pl
        files/sleep1.p
        files/sleeplock.c
        files/sleeplock.d
        files/sleeplock.h
        files/sleeplock.o
        files/spinlock.c
        files/spinlock.d
        files/spinlock.h
        files/spinlock.o
        files/spinp
        files/stat.h
        files/stressfs.asm
        files/stressfs.c
        files/stressfs.d
        files/stressfs.o
        files/stressfs.sym
        files/string.c
        files/string.d
        files/string.o
        files/swtch.o
        files/swtch.S
        files/symlink.patch
        files/syscall.c
        files/syscall.d
        files/syscall.h
        files/syscall.o
        files/sysfile.c
        files/sysfile.d
        files/sysfile.o
        files/sysproc.c
        files/sysproc.d
        files/sysproc.o
        files/timer.c
        files/timer.d
        files/timer.o
        files/toc.ftr
        files/toc.hdr
        files/trap.c
        files/trap.d
        files/trap.o
        files/trapasm.o
        files/trapasm.S
        files/traps.h
        files/TRICKS
        files/types.h
        files/uart.c
        files/uart.d
        files/uart.o
        files/ulib.c
        files/ulib.d
        files/ulib.o
        files/umalloc.c
        files/umalloc.d
        files/umalloc.o
        files/user.h
        files/usertests.asm
        files/usertests.c
        files/usertests.d
        files/usertests.o
        files/usertests.sym
        files/usys.o
        files/usys.S
        files/vectors.o
        files/vectors.pl
        files/vectors.S
        files/vm.c
        files/vm.d
        files/vm.o
        files/wc.asm
        files/wc.c
        files/wc.d
        files/wc.o
        files/wc.sym
        files/x86.h
        files/xv6.img
        files/zombie.asm
        files/zombie.c
        files/zombie.d
        files/zombie.o
        files/zombie.sym files/getppid.c)

add_executable(OS_Project_xv6_ ${SOURCE_FILES})