cmake_minimum_required(VERSION 3.6)
project(OS_Project_xv6_)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
        xv6_files/_cat
        xv6_files/_echo
        xv6_files/_forktest
        xv6_files/_grep
        xv6_files/_init
        xv6_files/_kill
        xv6_files/_ln
        xv6_files/_ls
        xv6_files/_mkdir
        xv6_files/_rm
        xv6_files/_sh
        xv6_files/_stressfs
        xv6_files/_usertests
        xv6_files/_wc
        xv6_files/_zombie
        xv6_files/asm.h
        xv6_files/bio.c
        xv6_files/bio.d
        xv6_files/bio.o
        xv6_files/bootasm.d
        xv6_files/bootasm.o
        xv6_files/bootasm.S
        xv6_files/bootblock
        xv6_files/bootblock.asm
        xv6_files/bootblock.o
        xv6_files/bootblockother.o
        xv6_files/bootmain.c
        xv6_files/bootmain.d
        xv6_files/bootmain.o
        xv6_files/buf.h
        xv6_files/BUGS
        xv6_files/cat.asm
        xv6_files/cat.c
        xv6_files/cat.d
        xv6_files/cat.o
        xv6_files/cat.sym
        xv6_files/console.c
        xv6_files/console.d
        xv6_files/console.o
        xv6_files/cuth
        xv6_files/date.h
        xv6_files/defs.h
        xv6_files/dot-bochsrc
        xv6_files/echo.asm
        xv6_files/echo.c
        xv6_files/echo.d
        xv6_files/echo.o
        xv6_files/echo.sym
        xv6_files/elf.h
        xv6_files/entry.o
        xv6_files/entry.S
        xv6_files/entryother
        xv6_files/entryother.asm
        xv6_files/entryother.d
        xv6_files/entryother.o
        xv6_files/entryother.S
        xv6_files/exec.c
        xv6_files/exec.d
        xv6_files/exec.o
        xv6_files/fcntl.h
        xv6_files/file.c
        xv6_files/file.d
        xv6_files/file.h
        xv6_files/file.o
        xv6_files/forktest.asm
        xv6_files/forktest.c
        xv6_files/forktest.d
        xv6_files/forktest.o
        xv6_files/fs.c
        xv6_files/fs.d
        xv6_files/fs.h
        xv6_files/fs.img
        xv6_files/fs.o
        xv6_files/gdbutil
        xv6_files/grep.asm
        xv6_files/grep.c
        xv6_files/grep.d
        xv6_files/grep.o
        xv6_files/grep.sym
        xv6_files/ide.c
        xv6_files/ide.d
        xv6_files/ide.o
        xv6_files/init.asm
        xv6_files/init.c
        xv6_files/init.d
        xv6_files/init.o
        xv6_files/init.sym
        xv6_files/initcode
        xv6_files/initcode.asm
        xv6_files/initcode.d
        xv6_files/initcode.o
        xv6_files/initcode.out
        xv6_files/initcode.S
        xv6_files/ioapic.c
        xv6_files/ioapic.d
        xv6_files/ioapic.o
        xv6_files/kalloc.c
        xv6_files/kalloc.d
        xv6_files/kalloc.o
        xv6_files/kbd.c
        xv6_files/kbd.d
        xv6_files/kbd.h
        xv6_files/kbd.o
        xv6_files/kernel
        xv6_files/kernel.asm
        xv6_files/kernel.ld
        xv6_files/kernel.sym
        xv6_files/kill.asm
        xv6_files/kill.c
        xv6_files/kill.d
        xv6_files/kill.o
        xv6_files/kill.sym
        xv6_files/lapic.c
        xv6_files/lapic.d
        xv6_files/lapic.o
        xv6_files/LICENSE
        xv6_files/ln.asm
        xv6_files/ln.c
        xv6_files/ln.d
        xv6_files/ln.o
        xv6_files/ln.sym
        xv6_files/log.c
        xv6_files/log.d
        xv6_files/log.o
        xv6_files/ls.asm
        xv6_files/ls.c
        xv6_files/ls.d
        xv6_files/ls.o
        xv6_files/ls.sym
        xv6_files/main.c
        xv6_files/main.d
        xv6_files/main.o
        xv6_files/Makefile
        xv6_files/memide.c
        xv6_files/memlayout.h
        xv6_files/mkdir.asm
        xv6_files/mkdir.c
        xv6_files/mkdir.d
        xv6_files/mkdir.o
        xv6_files/mkdir.sym
        xv6_files/mkfs
        xv6_files/mkfs.c
        xv6_files/mmu.h
        xv6_files/mp.c
        xv6_files/mp.d
        xv6_files/mp.h
        xv6_files/mp.o
        xv6_files/Notes
        xv6_files/param.h
        xv6_files/picirq.c
        xv6_files/picirq.d
        xv6_files/picirq.o
        xv6_files/pipe.c
        xv6_files/pipe.d
        xv6_files/pipe.o
        xv6_files/pr.pl
        xv6_files/printf.c
        xv6_files/printf.d
        xv6_files/printf.o
        xv6_files/printpcs
        xv6_files/proc.c
        xv6_files/proc.d
        xv6_files/proc.h
        xv6_files/proc.o
        xv6_files/README
        xv6_files/rm.asm
        xv6_files/rm.c
        xv6_files/rm.d
        xv6_files/rm.o
        xv6_files/rm.sym
        xv6_files/runoff
        xv6_files/runoff.list
        xv6_files/runoff.spec
        xv6_files/runoff1
        xv6_files/sh.asm
        xv6_files/sh.c
        xv6_files/sh.d
        xv6_files/sh.o
        xv6_files/sh.sym
        xv6_files/show1
        xv6_files/sign.pl
        xv6_files/sleep1.p
        xv6_files/sleeplock.c
        xv6_files/sleeplock.d
        xv6_files/sleeplock.h
        xv6_files/sleeplock.o
        xv6_files/spinlock.c
        xv6_files/spinlock.d
        xv6_files/spinlock.h
        xv6_files/spinlock.o
        xv6_files/spinp
        xv6_files/stat.h
        xv6_files/stressfs.asm
        xv6_files/stressfs.c
        xv6_files/stressfs.d
        xv6_files/stressfs.o
        xv6_files/stressfs.sym
        xv6_files/string.c
        xv6_files/string.d
        xv6_files/string.o
        xv6_files/swtch.o
        xv6_files/swtch.S
        xv6_files/symlink.patch
        xv6_files/syscall.c
        xv6_files/syscall.d
        xv6_files/syscall.h
        xv6_files/syscall.o
        xv6_files/sysfile.c
        xv6_files/sysfile.d
        xv6_files/sysfile.o
        xv6_files/sysproc.c
        xv6_files/sysproc.d
        xv6_files/sysproc.o
        xv6_files/timer.c
        xv6_files/timer.d
        xv6_files/timer.o
        xv6_files/toc.ftr
        xv6_files/toc.hdr
        xv6_files/trap.c
        xv6_files/trap.d
        xv6_files/trap.o
        xv6_files/trapasm.o
        xv6_files/trapasm.S
        xv6_files/traps.h
        xv6_files/TRICKS
        xv6_files/types.h
        xv6_files/uart.c
        xv6_files/uart.d
        xv6_files/uart.o
        xv6_files/ulib.c
        xv6_files/ulib.d
        xv6_files/ulib.o
        xv6_files/umalloc.c
        xv6_files/umalloc.d
        xv6_files/umalloc.o
        xv6_files/user.h
        xv6_files/usertests.asm
        xv6_files/usertests.c
        xv6_files/usertests.d
        xv6_files/usertests.o
        xv6_files/usertests.sym
        xv6_files/usys.o
        xv6_files/usys.S
        xv6_files/vectors.o
        xv6_files/vectors.pl
        xv6_files/vectors.S
        xv6_files/vm.c
        xv6_files/vm.d
        xv6_files/vm.o
        xv6_files/wc.asm
        xv6_files/wc.c
        xv6_files/wc.d
        xv6_files/wc.o
        xv6_files/wc.sym
        xv6_files/x86.h
        xv6_files/xv6.img
        xv6_files/zombie.asm
        xv6_files/zombie.c
        xv6_files/zombie.d
        xv6_files/zombie.o
        xv6_files/zombie.sym
        xv6_files/getppid.c
        xv6_files/RRsanity.c xv6_files/frrTest.c xv6_files/Gsanity.c xv6_files/sanity.c)

add_executable(OS_Project_xv6_ ${SOURCE_FILES})