cmake_minimum_required(VERSION 3.6)
project(xv6_wroking_directory)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    files/asm.h
    files/bio.c
    files/bootasm.S
    files/bootmain.c
    files/buf.h
    files/BUGS
    files/cat.c
    files/console.c
    files/cuth
    files/date.h
    files/defs.h
    files/dot-bochsrc
    files/echo.c
    files/elf.h
    files/entry.S
    files/entryother.S
    files/exec.c
    files/fcntl.h
    files/file.c
    files/file.h
    files/forktest.c
    files/fs.c
    files/fs.h
    files/gdbutil
    files/getppid.c
    files/grep.c
    files/ide.c
    files/init.c
    files/initcode.S
    files/ioapic.c
    files/kalloc.c
    files/kbd.c
    files/kbd.h
    files/kernel.ld
    files/kill.c
    files/lapic.c
    files/LICENSE
    files/ln.c
    files/log.c
    files/ls.c
    files/main.c
    files/Makefile
    files/memide.c
    files/memlayout.h
    files/mkdir.c
    files/mkfs.c
    files/mmu.h
    files/mp.c
    files/mp.h
    files/Notes
    files/param.h
    files/picirq.c
    files/pipe.c
    files/pr.pl
    files/printf.c
    files/printpcs
    files/proc.c
    files/proc.h
    files/README
    files/rm.c
    files/runoff
    files/runoff.list
    files/runoff.spec
    files/runoff1
    files/sh.c
    files/show1
    files/sign.pl
    files/sleep1.p
    files/sleeplock.c
    files/sleeplock.h
    files/spinlock.c
    files/spinlock.h
    files/spinp
    files/stat.h
    files/stressfs.c
    files/string.c
    files/swtch.S
    files/symlink.patch
    files/syscall.c
    files/syscall.h
    files/sysfile.c
    files/sysproc.c
    files/timer.c
    files/toc.ftr
    files/toc.hdr
    files/trap.c
    files/trapasm.S
    files/traps.h
    files/TRICKS
    files/types.h
    files/uart.c
    files/ulib.c
    files/umalloc.c
    files/user.h
    files/usertests.c
    files/usys.S
    files/vectors.pl
    files/vm.c
    files/wc.c
    files/x86.h
    files/zconf.h
    files/zombie.c
    files/waittest.c files/getPerformanceData.c)

add_executable(xv6_wroking_directory ${SOURCE_FILES})